<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diary</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty_list">No entries.</string>
    <string name="action_add">Add</string>
    <string name="title_activity_new_entry">New Entry</string>
    <string name="label_date">Date</string>
    <string name="label_event">Event</string>
    <string name="button_save">Save</string>
    <string name="action_save">onClickSave</string>
    <string name="remove_all">Remove all entries</string>

    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="favorite_icon">Favorite Icon</string>
    <string name="action_click_favorite">onClickFavorite</string>
    <string name="action_week_view">Week view</string>
    <string name="action_month_view">Month view</string>
    <string name="action_year_view">Year view</string>
    <string name="action_all_times_view">All times view</string>
    <string name="action_done">Done</string>
    <string name="action_backup">Backup data to SD</string>
    <string name="action_restore">Restore data from SD</string>
    <string name="title_activity_card">Cards</string>

</resources>
