<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize" >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".NewEntryActivity" >

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/label_date"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/eventTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/eventDatePicker"
            android:layout_marginTop="@dimen/form_large_padding"
            android:text="@string/label_event"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <DatePicker
            android:id="@+id/eventDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateTextView"
            android:layout_marginTop="@dimen/form_small_padding"
            android:calendarViewShown="false" />

        <EditText
            android:id="@+id/eventEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/eventTextView"
            android:ems="10"
            android:inputType="text|textAutoCorrect" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/eventEditText"
            android:layout_below="@+id/eventEditText"
            android:layout_marginTop="@dimen/form_large_padding"
            android:onClick="@string/action_save"
            android:text="@string/button_save" />
    </RelativeLayout>

</ScrollView>